tests/snapshots/snapshots__pipeline@final_ctl_resume.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/final_ctl_resume.pr
---
== tokens ==
VOpen Effect UIdent("Abort") LBrace Ctl Ident("abort") LParen KwInt RParen Colon KwInt RBrace VSemi Fn Ident("main") LParen RParen Eq VOpen Let Ident("v") Eq VOpen Handle Ident("abort") LParen Int(IntLit { value: 7, suffix: None }) RParen With VOpen Final Ctl Ident("abort") LParen Ident("code") RParen FatArrow Ident("resume") LParen Ident("code") RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VClose VSemi Ident("println") LParen Ident("v") RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Abort",
            params: [],
            ops: [
                EffOp {
                    name: "abort",
                    params: [
                        Int,
                    ],
                    ret: Int,
                },
            ],
            span: 130..169,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "v",
                    Spanned {
                        node: Handle(
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "abort",
                                        ),
                                        span: 204..209,
                                    },
                                    [
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 7,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 210..211,
                                        },
                                    ],
                                ),
                                span: 204..212,
                            },
                            [
                                Sugar(
                                    Final(
                                        "abort",
                                        [
                                            "code",
                                        ],
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "resume",
                                                    ),
                                                    span: 249..255,
                                                },
                                                [
                                                    Spanned {
                                                        node: Var(
                                                            "code",
                                                        ),
                                                        span: 256..260,
                                                    },
                                                ],
                                            ),
                                            span: 249..261,
                                        },
                                    ),
                                ),
                                Return(
                                    "r",
                                    Spanned {
                                        node: Var(
                                            "r",
                                        ),
                                        span: 280..281,
                                    },
                                ),
                            ],
                        ),
                        span: 197..281,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 284..291,
                            },
                            [
                                Spanned {
                                    node: Var(
                                        "v",
                                    ),
                                    span: 292..293,
                                },
                            ],
                        ),
                        span: 284..294,
                    },
                ),
                span: 185..294,
            },
            wheres: [],
            span: 171..294,
        },
    ],
}

== types ==
Type Error: final ctl clause cannot resume
    ╭─[ <source>:11:32 ]
    │
 11 │       final ctl abort(code) => resume(code)
    │                                ───┬──  
    │                                   ╰──── final ctl clause cannot resume
────╯
